--- a/layouts/api/list.html
+++ b/layouts/api/list.html
@@ -19,7 +19,7 @@
             {{ if not .Site.Params.ui.breadcrumb_disable }}{{ partial "breadcrumb.html" . }}{{ end }}
             {{ block "main" . }}{{ end }}
             <div class="iframe-container">
-              <iframe src="https://richardmarston.github.io/sogno-platform.github.io/{{ .Params.apiurl }}" width="100%" height="768" frameborder="0" allowfullscreen="allowfullscreen" ></iframe>
+              <iframe src="https://sogno-platform.github.io/{{ .Params.apiurl }}" width="100%" height="768" frameborder="0" allowfullscreen="allowfullscreen" ></iframe>
             </div>
           </main>
         </div>
